--- a/spring-creed-example/spring-creed-cache/build.gradle
+++ b/spring-creed-example/spring-creed-cache/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-    compile 'com.github.ben-manes.caffeine:caffeine:2.8.1'
+    implementation 'com.github.ben-manes.caffeine:caffeine:2.8.1'
 
-    compile "org.springframework.boot:spring-boot-starter-cache"
-    compile "org.springframework.boot:spring-boot-starter-data-redis"
+    implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
 
-    compile project(":spring-creed-mvc:spring-creed-context")
+    implementation project(":spring-creed-mvc:spring-creed-context")
 }
