--- a/spring-creed-example/spring-creed-elasticsearch/build.gradle
+++ b/spring-creed-example/spring-creed-elasticsearch/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile 'org.elasticsearch:elasticsearch:7.7.0'
-    compile 'org.elasticsearch.client:elasticsearch-rest-client:7.7.0'
-    compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.7.0'
+    implementation 'org.elasticsearch:elasticsearch:7.7.0'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-client:7.7.0'
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.7.0'
 }
