--- a/spring-creed-example/spring-creed-sso-component/spring-creed-sso-resource/build.gradle
+++ b/spring-creed-example/spring-creed-sso-component/spring-creed-sso-resource/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-data-rest'
-    compile 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'com.h2database:h2'
 }
