--- a/spring-creed-mvc/spring-creed-authorization-server/build.gradle
+++ b/spring-creed-mvc/spring-creed-authorization-server/build.gradle
@@ -1,15 +1,15 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-security"
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
-    compile "org.springframework.boot:spring-boot-starter-thymeleaf"
-    compile "org.springframework.session:spring-session-data-redis"
-    compile 'io.lettuce:lettuce-core'
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation "org.springframework.session:spring-session-data-redis"
+    implementation 'io.lettuce:lettuce-core'
 
     compileOnly "com.h2database:h2"
 
-    compile project(":spring-creed-mvc:spring-creed-context")
-    compile project(":spring-creed-mvc:spring-creed-common")
-    compile project(":spring-creed-mvc:spring-creed-redis-multiple")
+    implementation project(":spring-creed-mvc:spring-creed-context")
+    implementation project(":spring-creed-mvc:spring-creed-common")
+    implementation project(":spring-creed-mvc:spring-creed-redis-multiple")
 }
