--- a/java-algorithm/build.gradle
+++ b/java-algorithm/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+
 }
