--- a/spring-creed-example/build.gradle
+++ b/spring-creed-example/build.gradle
@@ -24,14 +24,14 @@ subprojects {
     }
 
     dependencies {
-//        compile('org.springframework.boot:spring-boot-starter-web') {
+//        implementation('org.springframework.boot:spring-boot-starter-web') {
 //            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
 //        }
 //
-//        compile 'org.springframework.boot:spring-boot-starter-undertow'
-        compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth'
-        compile "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
-        compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-        compile "org.springframework.boot:spring-boot-starter-data-jpa"
+//        implementation 'org.springframework.boot:spring-boot-starter-undertow'
+        implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth'
+        implementation "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
+        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     }
 }
