--- a/spring-creed-example/spring-creed-auth-rocketmq/build.gradle
+++ b/spring-creed-example/spring-creed-auth-rocketmq/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.0.4'
+    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.0.4'
 }
