--- a/spring-creed-example/spring-creed-authorization-code/build.gradle
+++ b/spring-creed-example/spring-creed-authorization-code/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-security"
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
 }
