--- a/spring-creed-example/spring-creed-distributed-session/build.gradle
+++ b/spring-creed-example/spring-creed-distributed-session/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-data-redis"
-    compile "org.springframework.session:spring-session-data-redis"
-    compile "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
+    implementation "org.springframework.session:spring-session-data-redis"
+    implementation "org.springframework.boot:spring-boot-starter-security"
 
-//    compile project(":spring-creed-mvc:spring-creed-context")
+//    implementation project(":spring-creed-mvc:spring-creed-context")
 }
