--- a/spring-creed-example/spring-creed-dubbo-component/spring-creed-dubbo-consumer/build.gradle
+++ b/spring-creed-example/spring-creed-dubbo-component/spring-creed-dubbo-consumer/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    compile project(":spring-creed-example:spring-creed-dubbo-component:spring-creed-dubbo-api")
+    implementation project(":spring-creed-example:spring-creed-dubbo-component:spring-creed-dubbo-api")
 }
