--- a/spring-creed-example/spring-creed-jasperreports/build.gradle
+++ b/spring-creed-example/spring-creed-jasperreports/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-//    compile 'net.sf.jasperreports:jasperreports:6.16.0'
+//    implementation 'net.sf.jasperreports:jasperreports:6.16.0'
 }
