--- a/spring-creed-example/spring-creed-security/build.gradle
+++ b/spring-creed-example/spring-creed-security/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-security"
 }
