--- a/spring-creed-example/spring-creed-sso-component/spring-creed-sso-client/build.gradle
+++ b/spring-creed-example/spring-creed-sso-component/spring-creed-sso-client/build.gradle
@@ -1,11 +1,11 @@
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-hateoas'
-    compile 'org.springframework.hateoas:spring-hateoas'
-    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-data-rest'
-    compile 'org.springframework.hateoas:spring-hateoas'
-    compile 'org.webjars:jquery:2.2.1'
-    compile 'org.webjars:materializecss:0.99.0'
-    compile 'org.webjars:material-design-icons:3.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+    implementation 'org.springframework.hateoas:spring-hateoas'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.hateoas:spring-hateoas'
+    implementation 'org.webjars:jquery:2.2.1'
+    implementation 'org.webjars:materializecss:0.99.0'
+    implementation 'org.webjars:material-design-icons:3.0.1'
 }
