--- a/spring-creed-example/spring-creed-sso-component/spring-creed-sso-server/build.gradle
+++ b/spring-creed-example/spring-creed-sso-component/spring-creed-sso-server/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile 'org.webjars:jquery:2.2.1'
-    compile 'org.webjars:materializecss:0.99.0'
-    compile 'org.webjars:material-design-icons:3.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation 'org.webjars:jquery:2.2.1'
+    implementation 'org.webjars:materializecss:0.99.0'
+    implementation 'org.webjars:material-design-icons:3.0.1'
 }
