--- a/spring-creed-mvc/build.gradle
+++ b/spring-creed-mvc/build.gradle
@@ -24,11 +24,11 @@ subprojects {
     }
 
     dependencies {
-//        compile('org.springframework.boot:spring-boot-starter-web') {
+//        implementation('org.springframework.boot:spring-boot-starter-web') {
 //            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
 //        }
 //
-//        compile 'org.springframework.boot:spring-boot-starter-undertow'
-        compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth'
+//        implementation 'org.springframework.boot:spring-boot-starter-undertow'
+        implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-sleuth'
     }
 }
