--- a/spring-creed-mvc/spring-creed-cloud/build.gradle
+++ b/spring-creed-mvc/spring-creed-cloud/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-sleuth'
-    compile 'org.springframework.cloud:spring-cloud-starter-zipkin'
-    compile 'org.apache.httpcomponents:httpclient:4.5.12'
-    compile('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+    implementation('org.springframework.boot:spring-boot-starter-web')
 }
