--- a/spring-creed-mvc/spring-creed-common/build.gradle
+++ b/spring-creed-mvc/spring-creed-common/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile ('io.springfox:springfox-swagger2:2.9.2') {
+    implementation ('io.springfox:springfox-swagger2:2.9.2') {
         exclude group: 'org.mapstruct', module: 'mapstruct'
     }
-    compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
