--- a/spring-creed-mvc/spring-creed-data-source-multiple/build.gradle
+++ b/spring-creed-mvc/spring-creed-data-source-multiple/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile "org.springframework:spring-aspects"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework:spring-aspects"
     compileOnly "com.h2database:h2"
 
-    compile 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter'
+    implementation 'org.apache.shardingsphere:sharding-jdbc-spring-boot-starter'
 }
