--- a/spring-creed-mvc/spring-creed-e2e-security/build.gradle
+++ b/spring-creed-mvc/spring-creed-e2e-security/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-cache"
-    compile 'com.github.ben-manes.caffeine:caffeine'
+    implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation 'com.github.ben-manes.caffeine:caffeine'
 }
