--- a/spring-creed-mvc/spring-creed-entity/build.gradle
+++ b/spring-creed-mvc/spring-creed-entity/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
 //    Starting with Boot 2.3, we also need to explicitly add the spring-boot-starter-validation dependency:
-    compile "org.springframework.boot:spring-boot-starter-validation"
-    compile "org.springframework.boot:spring-boot-starter-data-jpa"
-    compile project(":spring-creed-mvc:spring-creed-context")
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation project(":spring-creed-mvc:spring-creed-context")
 
-    compile 'org.mapstruct:mapstruct'
+    implementation 'org.mapstruct:mapstruct'
     compileOnly 'org.mapstruct:mapstruct-processor'
 }
