--- a/spring-creed-mvc/springboot-slice-upload/build.gradle
+++ b/spring-creed-mvc/springboot-slice-upload/build.gradle
@@ -12,5 +12,5 @@ dependencies {
     implementation 'org.apache.commons:commons-pool2:2.8.0'
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.12'
 
-    compile 'mysql:mysql-connector-java'
+    implementation 'mysql:mysql-connector-java'
 }
