--- a/spring-creed-webflux/build.gradle
+++ b/spring-creed-webflux/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
-//    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
+//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
     testRuntimeOnly group: 'org.springframework.security', name: 'spring-security-test'
 
