fix the project build issue

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ allprojects {
 }
 
 subprojects {
-//    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'idea'
     apply plugin: 'org.springframework.boot' //使用springboot插件
     apply plugin: 'io.spring.dependency-management' //版本管理插件
