--- a/spring-creed-example/spring-creed-auth-locallock/build.gradle
+++ b/spring-creed-example/spring-creed-auth-locallock/build.gradle
@@ -7,4 +7,6 @@ dependencies {
 
     implementation project(":spring-creed-mvc:spring-creed-context")
     implementation project(":spring-creed-mvc:spring-creed-entity")
+
+    implementation 'org.apache.commons:commons-lang3'
 }
