--- a/spring-creed-example/spring-creed-propertysource-parent/build.gradle
+++ b/spring-creed-example/spring-creed-propertysource-parent/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
 
-    implementation project(":spring-creed-example:spring-creed-propertysource-parent")
+//    implementation project(":spring-creed-example:spring-creed-propertysource-parent")
 }
