--- a/spring-creed-mvc/spring-creed-cloud/build.gradle
+++ b/spring-creed-mvc/spring-creed-cloud/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
     implementation 'org.apache.httpcomponents:httpclient:4.5.12'
     implementation('org.springframework.boot:spring-boot-starter-web')
 }
