--- a/spring-creed-mvc/spring-creed-context/build.gradle
+++ b/spring-creed-mvc/spring-creed-context/build.gradle
@@ -1,12 +1,13 @@
 dependencies {
-    implementation group: 'org.springframework', name: 'spring-aspects'
-    implementation 'org.apache.commons:commons-collections4'
-    implementation 'org.apache.commons:commons-text'
-    implementation 'org.apache.commons:commons-lang3'
-    implementation 'commons-io:commons-io'
-    implementation 'org.apache.commons:commons-pool2'
+    api group: 'org.springframework', name: 'spring-aspects'
+    api 'org.apache.commons:commons-collections4'
+    api 'org.apache.commons:commons-text'
+    api 'org.apache.commons:commons-lang3'
+    api 'commons-io:commons-io'
+    api 'org.apache.commons:commons-pool2'
 
-    implementation('org.springframework.boot:spring-boot-starter-web') {
+    api('org.springframework.boot:spring-boot-starter-web') {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     }
+    api 'org.springframework.boot:spring-boot-starter-json'
 }
