--- a/spring-creed-mvc/spring-creed-entity/build.gradle
+++ b/spring-creed-mvc/spring-creed-entity/build.gradle
@@ -1,9 +1,11 @@
 dependencies {
 //    Starting with Boot 2.3, we also need to explicitly add the spring-boot-starter-validation dependency:
-    implementation "org.springframework.boot:spring-boot-starter-validation"
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
-    implementation project(":spring-creed-mvc:spring-creed-context")
+    api "org.springframework.boot:spring-boot-starter-validation"
+    api "org.springframework.boot:spring-boot-starter-data-jpa"
+    api project(":spring-creed-mvc:spring-creed-context")
 
-    implementation 'org.mapstruct:mapstruct'
+    api 'org.mapstruct:mapstruct'
     compileOnly 'org.mapstruct:mapstruct-processor'
+
+    api 'org.springframework.boot:spring-boot-starter-json'
 }
