oauth2 resource update

--- a/settings.gradle
+++ b/settings.gradle
@@ -51,7 +51,9 @@ include 'spring-creed-mall:creed-mall-common'
 include 'spring-creed-mall:creed-mall-gateway'
 include 'spring-creed-mall:creed-mall-admin'
 include 'spring-creed-mall:creed-mall-third-party'
-findProject(':spring-creed-mall:creed-mall-third-party')?.name = 'creed-mall-third-party'
 include 'spring-creed-mall:creed-mall-core'
-findProject(':spring-creed-mall:creed-mall-core')?.name = 'creed-mall-core'
+include 'spring-creed-mvc:spring-creed-oauth2'
+include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-resource'
+include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-authorization-server'
+include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-standalone'
 
