--- a/spring-creed-mvc/build.gradle
+++ b/spring-creed-mvc/build.gradle
@@ -11,6 +11,7 @@ subprojects {
             dependency 'org.apache.commons:commons-collections4:4.4'
             dependency 'org.apache.commons:commons-text:1.8'
             dependency 'org.apache.commons:commons-lang3:3.9'
+            dependency 'org.apache.httpcomponents:httpclient:4.5.13'
             dependency 'commons-io:commons-io:2.6'
             dependency 'org.apache.commons:commons-pool2:2.8.0'
             dependency 'io.lettuce:lettuce-core:5.2.2.RELEASE'
