--- a/spring-creed-mvc/spring-creed-core/build.gradle
+++ b/spring-creed-mvc/spring-creed-core/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mobile'
+    implementation 'org.apache.httpcomponents:httpclient'
 }
