--- a/spring-creed-mvc/spring-creed-oauth2/spring-creed-oauth2-standalone/build.gradle
+++ b/spring-creed-mvc/spring-creed-oauth2/spring-creed-oauth2-standalone/build.gradle
@@ -1,5 +1,6 @@
 dependencies{
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.3.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
