--- a/spring-creed-mvc/spring-creed-oauth2/spring-creed-oauth2-standalone/src/main/resources/application.yml
+++ b/spring-creed-mvc/spring-creed-oauth2/spring-creed-oauth2-standalone/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
 
   main:
     allow-bean-definition-overriding: true
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
 server:
   port: 8080
 
@@ -15,4 +18,6 @@ logging:
     #    root: debug
     root: trace
     org.apache.tomcat: info
+
+
 
