--- a/spring-creed-mvc/spring-creed-oauth2/build.gradle
+++ b/spring-creed-mvc/spring-creed-oauth2/build.gradle
@@ -19,6 +19,8 @@ subprojects {
             dependency 'org.mapstruct:mapstruct:1.3.1.Final'
             dependency 'org.mapstruct:mapstruct-processor:1.3.1.Final'
             dependency 'com.github.ben-manes.caffeine:caffeine:2.8.2'
+            dependency 'org.apache.commons:commons-text:1.9'
+            dependency 'commons-io:commons-io:2.11.0'
 
         }
     }
