--- a/spring-creed-mvc/spring-creed-oauth2/spring-creed-oauth2-standalone/src/main/resources/application.yml
+++ b/spring-creed-mvc/spring-creed-oauth2/spring-creed-oauth2-standalone/src/main/resources/application.yml
@@ -23,5 +23,7 @@ logging:
     #    root: debug
     root: trace
     org.apache.tomcat: info
+    org.apache.catalina: info
+    com.zaxxer.hikari.pool: info
 
 
