--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'spring-creed-mvc:spring-creed-redis-multiple'
 include 'spring-creed-mvc:spring-creed-data-source-multiple'
 include 'spring-creed-mvc:spring-creed-e2e-security'
 include 'spring-creed-mvc:spring-creed-gradation-cache'
+include 'spring-creed-mvc:spring-creed-beanio'
 include 'spring-creed-example:spring-creed-auth-locallock'
 include 'spring-creed-example:spring-creed-auth-rocketmq'
 include 'spring-creed-example:spring-creed-authorization-code'
@@ -54,4 +55,5 @@ include 'spring-creed-mvc:spring-creed-oauth2'
 include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-resource'
 include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-authorization-server'
 include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-standalone'
+include 'creed-scala'
 
