--- a/settings.gradle
+++ b/settings.gradle
@@ -56,4 +56,5 @@ include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-resource'
 include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-authorization-server'
 include 'spring-creed-mvc:spring-creed-oauth2:spring-creed-oauth2-standalone'
 include 'creed-flink'
+include 'spring-creed-example:spring-creed-console'
 
