0001-flink-watermark-and-rest-template-update

--- a/creed-flink/build.gradle
+++ b/creed-flink/build.gradle
@@ -2,13 +2,24 @@ apply plugin: 'scala'
 
 buildscript {
     mainClassName = 'com.flink.stream.BoundedStreamWordCount'
+    ext {
+        flink_version = '1.15.2'
+    }
 }
 
 dependencies {
-    implementation 'org.apache.flink:flink-scala_2.12:1.15.2'
-    implementation 'org.apache.flink:flink-streaming-scala_2.12:1.15.2'
-    implementation 'org.apache.flink:flink-clients:1.15.2'
+    implementation "org.apache.flink:flink-scala_2.12:$flink_version"
+    implementation "org.apache.flink:flink-streaming-scala_2.12:$flink_version"
+    implementation "org.apache.flink:flink-clients:$flink_version"
+    implementation "org.apache.flink:flink-connector-kafka:$flink_version"
+
 
     implementation 'org.scala-lang:scala-library:2.12.16'
     testImplementation 'org.scalatest:scalatest_2.12:3.2.13'
+}
+
+tasks.register('printProperties') {
+    doLast {
+        println flink_version
+    }
 }
