--- a/spring-creed-example/spring-creed-console/src/main/resources/application.properties
+++ b/spring-creed-example/spring-creed-console/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
-server.port=8088
+server.port=8888
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 #logging.level.root=debug
