--- a/spring-creed-webflux/build.gradle
+++ b/spring-creed-webflux/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
 //    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 
