0001-spring-creed-starter-web-add

--- a/spring-creed-pom/spring-creed-pro/spring-creed-framework/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-framework/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-creed-starter-security</module>
         <module>spring-creed-common</module>
         <module>spring-creed-starter-banner</module>
+        <module>spring-creed-starter-web</module>
     </modules>
 
     <groupId>com.ethan</groupId>
