--- a/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
@@ -25,6 +25,7 @@
         <commons-io.version>2.11.0</commons-io.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <spring-creed-boot.version>1.1.0</spring-creed-boot.version>
+        <springdoc-openapi.version>1.6.14</springdoc-openapi.version>
     </properties>
 
     <dependencyManagement>
@@ -108,6 +109,11 @@
                 <artifactId>spring-creed-starter-banner</artifactId>
                 <version>${spring-creed-boot.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-starter-web</artifactId>
+                <version>${spring-creed-boot.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.ethan</groupId>
@@ -119,6 +125,12 @@
                 <groupId>org.mariadb.jdbc</groupId>
                 <artifactId>mariadb-java-client</artifactId>
                 <version>3.1.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc-openapi.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
