--- a/spring-creed-pom/spring-creed-pro/spring-creed-module-system/spring-creed-module-system-biz/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-module-system/spring-creed-module-system-biz/pom.xml
@@ -30,10 +30,10 @@
             <groupId>com.ethan</groupId>
             <artifactId>spring-creed-starter-banner</artifactId>
         </dependency>
-<!--        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>-->
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
