--- a/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
@@ -28,6 +28,10 @@
         <tika-core.version>2.7.0</tika-core.version>
         <hutool-bom.version>5.8.12</hutool-bom.version>
         <redisson.version>3.20.0</redisson.version>
+        <skywalking.version>8.14.0</skywalking.version>
+        <micrometer.version>1.0.3</micrometer.version>
+        <shardingsphere.version>5.2.1</shardingsphere.version>
+        <commons-text.version>1.10.0</commons-text.version>
     </properties>
 
     <dependencyManagement>
@@ -40,6 +44,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-tracing-bom</artifactId>
+                <version>${micrometer.version}</version>
+                <type>pom</type>
+            </dependency>
+
 
             <dependency>
                 <groupId>cn.hutool</groupId>
@@ -101,6 +113,17 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-text</artifactId>
+                <version>${commons-text.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>5.2.1</version>
+            </dependency>
+
 
 <!--            framework dependencies-->
             <dependency>
@@ -136,9 +159,20 @@
                 <version>${spring-creed-boot.version}</version>
             </dependency>
 
+<!--            job任务相关-->
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-starter-job</artifactId>
+                <version>${spring-creed-boot.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.ethan</groupId>
                 <artifactId>spring-creed-starter-kafka</artifactId>
+                <version>${spring-creed-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-starter-monitor</artifactId>
                 <version>${spring-creed-boot.version}</version>
             </dependency>
 
@@ -166,6 +200,27 @@
                 <artifactId>tika-core</artifactId>
                 <version>${tika-core.version}</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.skywalking/apm-toolkit-trace 链路追踪-->
+            <dependency>
+                <groupId>org.apache.skywalking</groupId>
+                <artifactId>apm-toolkit-trace</artifactId>
+                <version>${skywalking.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.skywalking</groupId>
+                <artifactId>apm-toolkit-logback-1.x</artifactId>
+                <version>${skywalking.version}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
+                <version>${shardingsphere.version}</version>
+            </dependency>
+
+
 
 
         </dependencies>
