--- a/spring-creed-pom/spring-creed-pro/spring-creed-testing/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-testing/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-creed-pro</artifactId>
         <groupId>com.ethan</groupId>
-        <version>1.1.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -66,6 +66,20 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.5.1</version>
+        </dependency>
+
+
     </dependencies>
 
 
