--- a/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-server/src/main/resources/application.yml
@@ -31,6 +31,9 @@ spring:
     web:
       pageable:
         one-indexed-parameters: true
+  thymeleaf:
+    enabled: true
+
 #logging:
 #  level:
 #    org:
