PDF thymeleaf itext7 generate

--- a/spring-creed-pom/spring-creed-pro/spring-creed-module-system/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-module-system/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>spring-creed-module-system-biz</module>
         <module>spring-creed-module-system-api</module>
+        <module>spring-creed-module-system-pdf</module>
     </modules>
 
     <properties>
