--- a/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-dependencies/pom.xml
@@ -221,8 +221,18 @@
                 <version>${shardingsphere.version}</version>
             </dependency>
 
-
-
+<!--            PDF生成-->
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>itext7-core</artifactId>
+                <version>7.2.5</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>html2pdf</artifactId>
+                <version>4.0.5</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
