--- a/spring-creed-pom/spring-creed-pro/spring-creed-server/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-server/pom.xml
@@ -11,6 +11,7 @@
 
     <groupId>com.ethan</groupId>
     <artifactId>spring-creed-server</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -35,6 +36,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+<!--            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>-->
         </dependency>
 <!--    解决无法加载静态文件的问题    had to add thymeleaf dependency to pom.xml. Without this dependency Spring boot didn't find static resources.-->
         <dependency>
@@ -45,7 +52,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
-
+<!--        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
