--- a/spring-creed-pom/spring-creed-pro/spring-creed-ui/package.json
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-ui/package.json
@@ -48,10 +48,18 @@
     "echarts-wordcloud": "^2.1.0",
     "element-plus": "2.3.14",
     "fast-xml-parser": "^4.3.0",
+    "github-markdown-css": "^5.5.0",
     "highlight.js": "^11.8.0",
     "intro.js": "^7.2.0",
     "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
+    "markdown-it": "^14.0.0",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-emoji": "^3.0.0",
+    "markdown-it-github-toc": "^3.2.4",
+    "markdown-it-ins": "^4.0.0",
+    "markdown-it-mark": "^4.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "min-dash": "^4.1.1",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
@@ -60,6 +68,7 @@
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
     "steady-xml": "^0.1.0",
+    "unplugin-icons": "^0.18.2",
     "url": "^0.11.3",
     "video.js": "^7.21.5",
     "vue": "^3.3.4",
@@ -74,7 +83,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@iconify/json": "^2.2.119",
+    "@iconify/json": "^2.2.173",
     "@intlify/unplugin-vue-i18n": "^1.2.0",
     "@purge-icons/generated": "^0.9.0",
     "@types/intro.js": "^5.1.1",
