--- a/spring-creed-pom/spring-creed-pro/spring-creed-ui/package.json
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-ui/package.json
@@ -51,6 +51,7 @@
     "github-markdown-css": "^5.5.0",
     "highlight.js": "^11.8.0",
     "intro.js": "^7.2.0",
+    "js-cookie": "^3.0.5",
     "jsencrypt": "^3.3.2",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.0.0",
