--- a/spring-creed-pom/spring-creed-pro/spring-creed-server/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-server/pom.xml
@@ -78,7 +78,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.boot.version}</version> <!-- 如果 spring.boot.version 版本修改，则这里也要跟着修改 -->
                 <configuration>
-                    <fork>true</fork>
+<!--                    <fork>true</fork>-->
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
