--- a/spring-creed-pom/spring-creed-pro/spring-creed-gateway/spring-cloud-gateway-auth/src/main/resources/application.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-gateway/spring-cloud-gateway-auth/src/main/resources/application.yml
@@ -28,6 +28,15 @@ spring:
             - Path=/v2/**
           filters: # 过滤器，对请求进行拦截，实现自定义的功能，对应 FilterDefinition 数组，注意此处的顺序！！！最终结果为http://localhost:8080//spring-cloud-gateway-actuator/showAll
             - StripPrefix=1
+            - name: Retry
+              args:
+                retries: 3
+                backoff:
+                  firstBackoff: 10ms
+                  maxBackoff: 50ms
+                  factor: 2
+                  basedOnPreviousValue: false
+
     loadbalancer:
       retry:
         backoff:
@@ -63,10 +72,11 @@ management:
       exposure:
         include: "*"
 
-#logging:
-#  level:
-#    root: debug
-
 logging:
-  config:
+  level:
+    root: info
+#    sun:
+#      rmi: info
+#    javax:
+#      management: info
 
