--- a/spring-creed-pom/spring-creed-pro/spring-creed-gateway/spring-creed-gateway-agent/pom.xml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-gateway/spring-creed-gateway-agent/pom.xml
@@ -19,6 +19,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.30.2-GA</version>
