--- a/spring-creed-pom/spring-creed-pro/spring-creed-gateway/spring-cloud-gateway-app/src/main/resources/application.yml
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-gateway/spring-cloud-gateway-app/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8088
+#  tomcat:
+#    max-connections: 1
 spring:
   application:
     name: gateway-application
@@ -25,7 +27,7 @@ spring:
         - id: student
           uri: http://localhost:8080 # 路由的目标地址
           predicates: # 断言，作为路由的匹配条件，对应 RouteDefinition 数组
-            - Path=/v2/**
+            - Path=/v1/**
           filters: # 过滤器，对请求进行拦截，实现自定义的功能，对应 FilterDefinition 数组，注意此处的顺序！！！最终结果为http://localhost:8080//spring-cloud-gateway-actuator/showAll
             - StripPrefix=1
             - name: Retry
