--- a/spring-creed-pom/spring-creed-pro/spring-creed-ui/package.json
+++ b/spring-creed-pom/spring-creed-pro/spring-creed-ui/package.json
@@ -9,7 +9,7 @@
     "dev": "vite --mode base",
     "front": "vite --mode front",
     "ts:check": "vue-tsc --noEmit",
-    "build:pro": "node --max_old_space_size=8192 ./node_modules/vite/bin/vite.js build --mode pro",
+    "build:pro": "node --max_old_space_size=8192 ./node_modules/vite/bin/vite.js build --base=/ --mode pro",
     "build:dev": "node --max_old_space_size=8192 ./node_modules/vite/bin/vite.js build --mode dev",
     "build:base": "node --max_old_space_size=8192 ./node_modules/vite/bin/vite.js build --mode base",
     "build:stage": "node --max_old_space_size=8192 ./node_modules/vite/bin/vite.js build --mode stage",
@@ -65,6 +65,7 @@
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
+    "octokit": "^4.0.2",
     "pinia": "^2.1.6",
     "qrcode": "^1.5.3",
     "qs": "^6.11.2",
